<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>gsrs-module-substances-core</module>
        <module>gsrs-module-substances-spring-boot-starter</module>
        <module>gsrs-module-substances-spring-boot-autoconfigure</module>
        <module>gsrs-fda-substance-extension</module>
        <module>gsrs-module-substance-example</module>
        <module>gsrs-module-substances-api</module>
        <module>gsrs-module-substances-dto</module>
        <module>gsrs-module-substances-tests</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.4.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>gov.nih.ncats</groupId>
    <artifactId>gsrs-module-substances</artifactId>
    <version>3.0.2-SNAPSHOT</version>
    <name>GSRS Substance Module</name>
    <description>Substance Module for GSRS Spring Boot</description>

    <scm>
        <url>https://github.com/ncats/gsrs-spring-module-substances.git</url>
    </scm>
    <properties>
        <java.version>1.8</java.version>
        <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
        <gsrs.version>3.0.2-SNAPSHOT</gsrs.version>
        <gsrs.substance.version>3.0.2-SNAPSHOT</gsrs.substance.version>
        <spring-boot.version>2.4.5</spring-boot.version>
        <log4j2.version>2.17.2</log4j2.version>
    </properties>

    <repositories>
        <repository>
            <id>oss.sonatype.org-snapshot</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
</project>
